// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lists [COMPL] Initialization from object list literal 1`] = `"let myTypeList = new KYTHERA.type(\\"list\\", { contains: new KYTHERA.type(\\"obj\\", {\\"a\\": KYTHERA.type.PRIMITIVES[\\"int\\"],\\"b\\": KYTHERA.type.PRIMITIVES[\\"str\\"],})}).makeNew();"`;

exports[`Lists [PARSE] Access function returning list 1`] = `
Array [
  ParseNode {
    "identifier": "myListFn",
    "kind": "let",
    "value": ParseNode {
      "body": Array [
        ParseNode {
          "identifier": "result",
          "kind": "let",
          "value": ParseNode {
            "kind": "new",
            "target": ParseNode {
              "baseType": "list",
              "contains": ParseNode {
                "baseType": "int",
                "kind": "type",
                "origin": "builtin",
              },
              "kind": "type",
              "origin": "builtin",
            },
          },
        },
        ParseNode {
          "kind": "assign",
          "left": ParseNode {
            "index": ParseNode {
              "kind": "literal",
              "type": ParseNode {
                "baseType": "int",
                "kind": "type",
                "origin": "builtin",
              },
              "value": 0,
            },
            "kind": "access",
            "target": ParseNode {
              "kind": "identifier",
              "name": "result",
            },
            "type": "unknown",
          },
          "operator": "=",
          "right": ParseNode {
            "kind": "literal",
            "type": ParseNode {
              "baseType": "int",
              "kind": "type",
              "origin": "builtin",
            },
            "value": 10,
          },
        },
      ],
      "kind": "literal",
      "parameters": Array [],
      "returns": ParseNode {
        "baseType": "list",
        "contains": ParseNode {
          "baseType": "int",
          "kind": "type",
          "origin": "builtin",
        },
        "kind": "type",
        "origin": "builtin",
      },
      "type": ParseNode {
        "baseType": "fn",
        "kind": "type",
        "origin": "builtin",
        "parameters": Array [],
        "returns": ParseNode {
          "baseType": "list",
          "contains": ParseNode {
            "baseType": "int",
            "kind": "type",
            "origin": "builtin",
          },
          "kind": "type",
          "origin": "builtin",
        },
      },
    },
  },
  ParseNode {
    "index": ParseNode {
      "kind": "literal",
      "type": ParseNode {
        "baseType": "int",
        "kind": "type",
        "origin": "builtin",
      },
      "value": 0,
    },
    "kind": "access",
    "target": ParseNode {
      "arguments": Array [],
      "kind": "call",
      "target": ParseNode {
        "kind": "identifier",
        "name": "myListFn",
      },
    },
    "type": "unknown",
  },
]
`;

exports[`Lists [PARSE] Initialization and assignment access 1`] = `
Array [
  ParseNode {
    "identifier": "myList",
    "kind": "let",
    "value": ParseNode {
      "kind": "new",
      "target": ParseNode {
        "baseType": "list",
        "contains": ParseNode {
          "baseType": "int",
          "kind": "type",
          "origin": "builtin",
        },
        "kind": "type",
        "origin": "builtin",
      },
    },
  },
  ParseNode {
    "kind": "assign",
    "left": ParseNode {
      "index": ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "int",
          "kind": "type",
          "origin": "builtin",
        },
        "value": 0,
      },
      "kind": "access",
      "target": ParseNode {
        "kind": "identifier",
        "name": "myList",
      },
      "type": "unknown",
    },
    "operator": "=",
    "right": ParseNode {
      "kind": "literal",
      "type": ParseNode {
        "baseType": "int",
        "kind": "type",
        "origin": "builtin",
      },
      "value": 10,
    },
  },
]
`;

exports[`Lists [PARSE] Initialization from object list literal 1`] = `
Array [
  ParseNode {
    "identifier": "myTypeList",
    "kind": "let",
    "value": ParseNode {
      "kind": "new",
      "target": ParseNode {
        "baseType": "list",
        "contains": ParseNode {
          "baseType": "obj",
          "kind": "type",
          "origin": "builtin",
          "structure": Object {
            "a": ParseNode {
              "baseType": "int",
              "kind": "type",
              "origin": "builtin",
            },
            "b": ParseNode {
              "baseType": "str",
              "kind": "type",
              "origin": "builtin",
            },
          },
        },
        "kind": "type",
        "origin": "builtin",
      },
    },
  },
]
`;

exports[`Lists [PARSE] Initialization with custom type 1`] = `
Array [
  ParseNode {
    "identifier": "myType",
    "kind": "let",
    "value": ParseNode {
      "kind": "literal",
      "type": ParseNode {
        "baseType": "type",
        "kind": "type",
        "origin": "builtin",
      },
      "value": ParseNode {
        "baseType": "obj",
        "kind": "type",
        "origin": "builtin",
        "structure": Object {
          "a": ParseNode {
            "baseType": "int",
            "kind": "type",
            "origin": "builtin",
          },
          "b": ParseNode {
            "baseType": "str",
            "kind": "type",
            "origin": "builtin",
          },
        },
      },
    },
  },
  ParseNode {
    "identifier": "myTypeList",
    "kind": "let",
    "value": ParseNode {
      "kind": "new",
      "target": ParseNode {
        "baseType": "list",
        "contains": ParseNode {
          "kind": "type",
          "name": "myType",
          "origin": "named",
        },
        "kind": "type",
        "origin": "builtin",
      },
    },
  },
]
`;

exports[`Lists List literals [COMPL] bool 1`] = `"new KYTHERA.value([new KYTHERA.value(true, KYTHERA.type.PRIMITIVES[\\"bool\\"]),new KYTHERA.value(false, KYTHERA.type.PRIMITIVES[\\"bool\\"])], new KYTHERA.type(\\"list\\", { contains: KYTHERA.type.PRIMITIVES[\\"bool\\"]}));"`;

exports[`Lists List literals [COMPL] float 1`] = `"new KYTHERA.value([new KYTHERA.value(1.234, KYTHERA.type.PRIMITIVES[\\"float\\"]),new KYTHERA.value(3.14159, KYTHERA.type.PRIMITIVES[\\"float\\"])], new KYTHERA.type(\\"list\\", { contains: KYTHERA.type.PRIMITIVES[\\"float\\"]}));"`;

exports[`Lists List literals [COMPL] fn 1`] = `"new KYTHERA.value([new KYTHERA.value((a) => {return new KYTHERA.value(null, KYTHERA.type.PRIMITIVES[\\"null\\"]);}, new KYTHERA.type(\\"fn\\", { parameters: [KYTHERA.type.PRIMITIVES[\\"int\\"]], returns: KYTHERA.type.PRIMITIVES[\\"null\\"]})),new KYTHERA.value((b) => {return new KYTHERA.value(null, KYTHERA.type.PRIMITIVES[\\"null\\"]);}, new KYTHERA.type(\\"fn\\", { parameters: [KYTHERA.type.PRIMITIVES[\\"int\\"]], returns: KYTHERA.type.PRIMITIVES[\\"null\\"]}))], new KYTHERA.type(\\"list\\", { contains: new KYTHERA.type(\\"fn\\", { parameters: [KYTHERA.type.PRIMITIVES[\\"int\\"]], returns: KYTHERA.type.PRIMITIVES[\\"null\\"]})}));"`;

exports[`Lists List literals [COMPL] int 1`] = `"new KYTHERA.value([new KYTHERA.value(1, KYTHERA.type.PRIMITIVES[\\"int\\"]),new KYTHERA.value(2, KYTHERA.type.PRIMITIVES[\\"int\\"]),new KYTHERA.value(3, KYTHERA.type.PRIMITIVES[\\"int\\"]),new KYTHERA.value(4, KYTHERA.type.PRIMITIVES[\\"int\\"])], new KYTHERA.type(\\"list\\", { contains: KYTHERA.type.PRIMITIVES[\\"int\\"]}));"`;

exports[`Lists List literals [COMPL] null 1`] = `"new KYTHERA.value([new KYTHERA.value(null, KYTHERA.type.PRIMITIVES[\\"null\\"]),new KYTHERA.value(null, KYTHERA.type.PRIMITIVES[\\"null\\"])], new KYTHERA.type(\\"list\\", { contains: KYTHERA.type.PRIMITIVES[\\"null\\"]}));"`;

exports[`Lists List literals [COMPL] obj 1`] = `"new KYTHERA.value([new KYTHERA.value({\\"a\\": new KYTHERA.value(0, KYTHERA.type.PRIMITIVES[\\"int\\"]),\\"b\\": new KYTHERA.value(\\"asdf\\", KYTHERA.type.PRIMITIVES[\\"str\\"]),}, new KYTHERA.type(\\"obj\\", {})),new KYTHERA.value({\\"a\\": new KYTHERA.value(3, KYTHERA.type.PRIMITIVES[\\"int\\"]),\\"b\\": new KYTHERA.value(\\"qwerty\\", KYTHERA.type.PRIMITIVES[\\"str\\"]),}, new KYTHERA.type(\\"obj\\", {}))], new KYTHERA.type(\\"list\\", { contains: new KYTHERA.type(\\"obj\\", {})}));"`;

exports[`Lists List literals [COMPL] str 1`] = `"new KYTHERA.value([new KYTHERA.value(\\"hello\\", KYTHERA.type.PRIMITIVES[\\"str\\"]),new KYTHERA.value(\\"world\\", KYTHERA.type.PRIMITIVES[\\"str\\"])], new KYTHERA.type(\\"list\\", { contains: KYTHERA.type.PRIMITIVES[\\"str\\"]}));"`;

exports[`Lists List literals [COMPL] type 1`] = `"new KYTHERA.value([new KYTHERA.value(KYTHERA.type.PRIMITIVES[\\"int\\"], KYTHERA.type.PRIMITIVES[\\"type\\"]),new KYTHERA.value(KYTHERA.type.PRIMITIVES[\\"float\\"], KYTHERA.type.PRIMITIVES[\\"type\\"]),new KYTHERA.value(new KYTHERA.type(\\"fn\\", { parameters: [KYTHERA.type.PRIMITIVES[\\"int\\"]], returns: KYTHERA.type.PRIMITIVES[\\"null\\"]}), KYTHERA.type.PRIMITIVES[\\"type\\"])], new KYTHERA.type(\\"list\\", { contains: KYTHERA.type.PRIMITIVES[\\"type\\"]}));"`;

exports[`Lists List literals [PARSE] bool 1`] = `
Array [
  ParseNode {
    "elements": Array [
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "bool",
          "kind": "type",
          "origin": "builtin",
        },
        "value": true,
      },
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "bool",
          "kind": "type",
          "origin": "builtin",
        },
        "value": false,
      },
    ],
    "kind": "literal",
    "type": ParseNode {
      "baseType": "list",
      "contains": ParseNode {
        "baseType": "bool",
        "kind": "type",
        "origin": "builtin",
      },
      "kind": "type",
      "origin": "builtin",
    },
  },
]
`;

exports[`Lists List literals [PARSE] float 1`] = `
Array [
  ParseNode {
    "elements": Array [
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "float",
          "kind": "type",
          "origin": "builtin",
        },
        "value": 1.234,
      },
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "float",
          "kind": "type",
          "origin": "builtin",
        },
        "value": 3.14159,
      },
    ],
    "kind": "literal",
    "type": ParseNode {
      "baseType": "list",
      "contains": ParseNode {
        "baseType": "float",
        "kind": "type",
        "origin": "builtin",
      },
      "kind": "type",
      "origin": "builtin",
    },
  },
]
`;

exports[`Lists List literals [PARSE] fn 1`] = `
Array [
  ParseNode {
    "elements": Array [
      ParseNode {
        "body": Array [
          ParseNode {
            "kind": "return",
            "value": ParseNode {
              "kind": "literal",
              "type": ParseNode {
                "baseType": "null",
                "kind": "type",
                "origin": "builtin",
              },
              "value": null,
            },
          },
        ],
        "kind": "literal",
        "parameters": Array [
          Object {
            "name": "a",
            "type": ParseNode {
              "baseType": "int",
              "kind": "type",
              "origin": "builtin",
            },
          },
        ],
        "returns": ParseNode {
          "baseType": "null",
          "kind": "type",
          "origin": "builtin",
        },
        "type": ParseNode {
          "baseType": "fn",
          "kind": "type",
          "origin": "builtin",
          "parameters": Array [
            ParseNode {
              "baseType": "int",
              "kind": "type",
              "origin": "builtin",
            },
          ],
          "returns": ParseNode {
            "baseType": "null",
            "kind": "type",
            "origin": "builtin",
          },
        },
      },
      ParseNode {
        "body": Array [
          ParseNode {
            "kind": "return",
            "value": ParseNode {
              "kind": "literal",
              "type": ParseNode {
                "baseType": "null",
                "kind": "type",
                "origin": "builtin",
              },
              "value": null,
            },
          },
        ],
        "kind": "literal",
        "parameters": Array [
          Object {
            "name": "b",
            "type": ParseNode {
              "baseType": "int",
              "kind": "type",
              "origin": "builtin",
            },
          },
        ],
        "returns": ParseNode {
          "baseType": "null",
          "kind": "type",
          "origin": "builtin",
        },
        "type": ParseNode {
          "baseType": "fn",
          "kind": "type",
          "origin": "builtin",
          "parameters": Array [
            ParseNode {
              "baseType": "int",
              "kind": "type",
              "origin": "builtin",
            },
          ],
          "returns": ParseNode {
            "baseType": "null",
            "kind": "type",
            "origin": "builtin",
          },
        },
      },
    ],
    "kind": "literal",
    "type": ParseNode {
      "baseType": "list",
      "contains": ParseNode {
        "baseType": "fn",
        "kind": "type",
        "origin": "builtin",
        "parameters": Array [
          ParseNode {
            "baseType": "int",
            "kind": "type",
            "origin": "builtin",
          },
        ],
        "returns": ParseNode {
          "baseType": "null",
          "kind": "type",
          "origin": "builtin",
        },
      },
      "kind": "type",
      "origin": "builtin",
    },
  },
]
`;

exports[`Lists List literals [PARSE] int 1`] = `
Array [
  ParseNode {
    "elements": Array [
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "int",
          "kind": "type",
          "origin": "builtin",
        },
        "value": 1,
      },
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "int",
          "kind": "type",
          "origin": "builtin",
        },
        "value": 2,
      },
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "int",
          "kind": "type",
          "origin": "builtin",
        },
        "value": 3,
      },
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "int",
          "kind": "type",
          "origin": "builtin",
        },
        "value": 4,
      },
    ],
    "kind": "literal",
    "type": ParseNode {
      "baseType": "list",
      "contains": ParseNode {
        "baseType": "int",
        "kind": "type",
        "origin": "builtin",
      },
      "kind": "type",
      "origin": "builtin",
    },
  },
]
`;

exports[`Lists List literals [PARSE] null 1`] = `
Array [
  ParseNode {
    "elements": Array [
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "null",
          "kind": "type",
          "origin": "builtin",
        },
        "value": null,
      },
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "null",
          "kind": "type",
          "origin": "builtin",
        },
        "value": null,
      },
    ],
    "kind": "literal",
    "type": ParseNode {
      "baseType": "list",
      "contains": ParseNode {
        "baseType": "null",
        "kind": "type",
        "origin": "builtin",
      },
      "kind": "type",
      "origin": "builtin",
    },
  },
]
`;

exports[`Lists List literals [PARSE] obj 1`] = `
Array [
  ParseNode {
    "elements": Array [
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "obj",
          "kind": "type",
          "origin": "builtin",
          "structure": Object {},
        },
        "value": Object {
          "a": ParseNode {
            "kind": "literal",
            "type": ParseNode {
              "baseType": "int",
              "kind": "type",
              "origin": "builtin",
            },
            "value": 0,
          },
          "b": ParseNode {
            "kind": "literal",
            "type": ParseNode {
              "baseType": "str",
              "kind": "type",
              "origin": "builtin",
            },
            "value": "asdf",
          },
        },
      },
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "obj",
          "kind": "type",
          "origin": "builtin",
          "structure": Object {},
        },
        "value": Object {
          "a": ParseNode {
            "kind": "literal",
            "type": ParseNode {
              "baseType": "int",
              "kind": "type",
              "origin": "builtin",
            },
            "value": 3,
          },
          "b": ParseNode {
            "kind": "literal",
            "type": ParseNode {
              "baseType": "str",
              "kind": "type",
              "origin": "builtin",
            },
            "value": "qwerty",
          },
        },
      },
    ],
    "kind": "literal",
    "type": ParseNode {
      "baseType": "list",
      "contains": ParseNode {
        "baseType": "obj",
        "kind": "type",
        "origin": "builtin",
        "structure": Object {},
      },
      "kind": "type",
      "origin": "builtin",
    },
  },
]
`;

exports[`Lists List literals [PARSE] str 1`] = `
Array [
  ParseNode {
    "elements": Array [
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "str",
          "kind": "type",
          "origin": "builtin",
        },
        "value": "hello",
      },
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "str",
          "kind": "type",
          "origin": "builtin",
        },
        "value": "world",
      },
    ],
    "kind": "literal",
    "type": ParseNode {
      "baseType": "list",
      "contains": ParseNode {
        "baseType": "str",
        "kind": "type",
        "origin": "builtin",
      },
      "kind": "type",
      "origin": "builtin",
    },
  },
]
`;

exports[`Lists List literals [PARSE] type 1`] = `
Array [
  ParseNode {
    "elements": Array [
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "type",
          "kind": "type",
          "origin": "builtin",
        },
        "value": ParseNode {
          "baseType": "int",
          "kind": "type",
          "origin": "builtin",
        },
      },
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "type",
          "kind": "type",
          "origin": "builtin",
        },
        "value": ParseNode {
          "baseType": "float",
          "kind": "type",
          "origin": "builtin",
        },
      },
      ParseNode {
        "kind": "literal",
        "type": ParseNode {
          "baseType": "type",
          "kind": "type",
          "origin": "builtin",
        },
        "value": ParseNode {
          "baseType": "fn",
          "kind": "type",
          "origin": "builtin",
          "parameters": Array [
            ParseNode {
              "baseType": "int",
              "kind": "type",
              "origin": "builtin",
            },
          ],
          "returns": ParseNode {
            "baseType": "null",
            "kind": "type",
            "origin": "builtin",
          },
        },
      },
    ],
    "kind": "literal",
    "type": ParseNode {
      "baseType": "list",
      "contains": ParseNode {
        "baseType": "type",
        "kind": "type",
        "origin": "builtin",
      },
      "kind": "type",
      "origin": "builtin",
    },
  },
]
`;
